examples/test/testpolicy17700.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17700
  namespace: namespace62
spec:
  podSelector:
    matchLabels:
      key24: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value26
      podSelector:
        matchLabels:
          key5: value33
          key11: value33
          key33: value23
